--- a/css/main.css
+++ b/css/main.css
@@ -688,4 +688,108 @@ a {
   background-color: #fff;
 }
 /* USEFUL END */
+
+/* FEEDBACK START */
+.feedback{
+  margin-bottom: 247px;
+  font-family: var(--fontFamily);
+}
+
+.feedback-wrapper{
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+
+.feedback-iframe{
+  width: 100%;
+  height: 100%;
+  max-height: 660px;
+}
+
+.feedback-content{
+  background-image: url('../images/feedback-bg.png');
+  background-repeat: no-repeat;
+  background-color: #000;
+}
+
+.feedback-form{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-left: 166px;
+  padding-top: 62px;
+  padding-bottom: 74px;
+}
+
+.feedback-form__title{
+  margin-bottom: 14px;
+  color: #FFF;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.feedback-form__desc{
+  margin-bottom: 29px;
+  color: #949494;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+
+.feedback-form__input{
+  width: 100%;
+  max-width: 375px;
+  margin-bottom: 14px;
+  padding: 16px 0 13px 22px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.feedback-form__input:focus{
+  outline: none;
+}
+
+.feedback-form__input::placeholder{
+  color: #949494;
+}
+
+.feedback-form__input:valid{
+  border: 2px solid #90EE90;
+}
+
+.feedback-form__input:not(:focus):not(:placeholder-shown):invalid{
+  border: 2px solid red;
+}
+
+
+.feedback-form__textarea{
+  padding-right: 70px;
+}
+
+.feedback-form__textarea:valid{
+  border: 2px solid blue;
+}
+
+.feedback-form__textarea:not(:focus):not(:placeholder-shown):invalid{
+  border: 2px solid red;
+}
+
+
+.feedback-form__btn{
+  padding: 15px 49px 14px 50px;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  background-color: #FFBD54;
+  border: none;
+  cursor: pointer;
+}
+
+.feedback-form__btn:active{
+  opacity: .6;
+}
+
+/* FEEDBACK END */
 /* MAIN END */
